cargo_check_tools_2.log
    Updating crates.io index
     Locking 43 packages to latest compatible versions
      Adding aligned v0.4.3
      Adding aligned-vec v0.6.4
      Adding arg_enum_proc_macro v0.3.4
      Adding as-slice v0.2.1
      Adding av-scenechange v0.14.1
      Adding av1-grain v0.2.5
      Adding avif-serialize v0.8.8
      Adding bit_field v0.10.3
      Adding bitstream-io v4.9.0
      Adding built v0.8.0
      Adding color_quant v1.1.0
      Adding core2 v0.4.0
      Adding equator v0.4.2
      Adding equator-macro v0.4.2
      Adding exr v1.74.0
      Adding gif v0.14.1
      Adding image-webp v0.2.4
      Adding imgref v1.12.0
      Adding interpolate_name v0.2.4
      Adding itertools v0.14.0
      Adding lebe v0.5.3
      Adding libfuzzer-sys v0.4.12
      Adding loop9 v0.1.5
      Adding maybe-rayon v0.1.1
      Adding new_debug_unreachable v1.0.6
      Adding nom v8.0.0
      Adding noop_proc_macro v0.3.0
      Adding num-bigint v0.4.6
      Adding num-derive v0.4.2
      Adding num-integer v0.1.46
      Adding num-rational v0.4.2
      Adding pastey v0.1.1
      Adding profiling-procmacros v1.0.17
      Adding qoi v0.4.1
      Adding rav1e v0.8.1
      Adding ravif v0.12.0
      Adding rgb v0.8.52
      Adding simd_helpers v0.1.0
      Adding v_frame v0.3.9
      Adding y4m v0.8.0
      Adding zune-core v0.5.1
      Adding zune-inflate v0.2.54
      Adding zune-jpeg v0.5.12
 Downloading crates ...
  Downloaded avif-serialize v0.8.8
  Downloaded as-slice v0.2.1
  Downloaded aligned-vec v0.6.4
  Downloaded bit_field v0.10.3
  Downloaded aligned v0.4.3
  Downloaded arg_enum_proc_macro v0.3.4
  Downloaded profiling-procmacros v1.0.17
  Downloaded y4m v0.8.0
  Downloaded noop_proc_macro v0.3.0
  Downloaded lebe v0.5.3
  Downloaded wasm-bindgen-shared v0.2.108
  Downloaded wasm-bindgen-macro v0.2.108
  Downloaded new_debug_unreachable v1.0.6
  Downloaded maybe-rayon v0.1.1
  Downloaded color_quant v1.1.0
  Downloaded simd_helpers v0.1.0
  Downloaded zune-core v0.5.1
  Downloaded zune-inflate v0.2.54
  Downloaded gif v0.14.1
  Downloaded zune-jpeg v0.5.12
  Downloaded image-webp v0.2.4
  Downloaded num-bigint v0.4.6
  Downloaded nom v8.0.0
  Downloaded qoi v0.4.1
  Downloaded itertools v0.14.0
  Downloaded imgref v1.12.0
  Downloaded bitstream-io v4.9.0
  Downloaded wasm-bindgen-macro-support v0.2.108
  Downloaded exr v1.74.0
  Downloaded wasm-bindgen v0.2.108
  Downloaded core2 v0.4.0
  Downloaded built v0.8.0
  Downloaded av1-grain v0.2.5
  Downloaded v_frame v0.3.9
  Downloaded rustversion v1.0.22
  Downloaded rgb v0.8.52
  Downloaded ravif v0.12.0
  Downloaded num-rational v0.4.2
  Downloaded num-integer v0.1.46
  Downloaded av-scenechange v0.14.1
  Downloaded num-derive v0.4.2
  Downloaded equator-macro v0.4.2
  Downloaded equator v0.4.2
  Downloaded pastey v0.1.1
  Downloaded loop9 v0.1.5
  Downloaded rav1e v0.8.1
    Checking log v0.4.29
   Compiling syn v2.0.115
   Compiling libc v0.2.182
    Checking smallvec v1.15.1
   Compiling num-traits v0.2.19
   Compiling cc v1.2.56
    Checking wayland-sys v0.31.8
   Compiling zerocopy v0.8.39
    Checking num-integer v0.1.46
    Checking memchr v2.8.0
   Compiling rustix v0.38.44
   Compiling wayland-backend v0.3.12
    Checking num-bigint v0.4.6
    Checking memmap2 v0.9.9
    Checking indexmap v2.13.0
    Checking wayland-client v0.31.12
    Checking num-rational v0.4.2
    Checking as-slice v0.2.1
    Checking parking_lot_core v0.9.12
   Compiling av-scenechange v0.14.1
   Compiling built v0.8.0
   Compiling rav1e v0.8.1
    Checking parking_lot v0.12.5
    Checking wayland-protocols v0.32.10
    Checking aligned v0.4.3
    Checking khronos-egl v6.0.0
    Checking core2 v0.4.0
    Checking nom v8.0.0
   Compiling bytemuck_derive v1.10.2
   Compiling thiserror-impl v1.0.69
    Checking bytemuck v1.25.0
   Compiling equator-macro v0.4.2
    Checking thiserror v1.0.69
   Compiling profiling-procmacros v1.0.17
    Checking profiling v1.0.17
   Compiling zerocopy-derive v0.8.39
    Checking equator v0.4.2
    Checking font-types v0.7.3
    Checking aligned-vec v0.6.4
    Checking v_frame v0.3.9
   Compiling thiserror-impl v2.0.18
    Checking read-fonts v0.22.7
    Checking thiserror v2.0.18
    Checking naga v23.1.0
    Checking calloop v0.13.0
   Compiling arg_enum_proc_macro v0.3.4
    Checking y4m v0.8.0
    Checking quick-error v2.0.1
   Compiling pastey v0.1.1
    Checking tiny-skia-path v0.11.4
    Checking wayland-csd-frame v0.3.0
    Checking wayland-cursor v0.31.12
    Checking calloop-wayland-source v0.3.0
    Checking wayland-protocols-wlr v0.3.10
    Checking skrifa v0.22.3
    Checking av1-grain v0.2.5
    Checking half v2.7.1
   Compiling num-derive v0.4.2
   Compiling fax_derive v0.2.0
    Checking wgpu-hal v23.0.1
    Checking bitstream-io v4.9.0
    Checking maybe-rayon v0.1.1
    Checking itertools v0.14.0
   Compiling simd_helpers v0.1.0
    Checking new_debug_unreachable v1.0.6
    Checking weezl v0.1.12
   Compiling noop_proc_macro v0.3.0
    Checking imgref v1.12.0
    Checking zune-core v0.4.12
    Checking rustybuzz v0.14.1
    Checking zune-jpeg v0.4.21
    Checking swash v0.1.19
    Checking wgpu-core v23.0.1
    Checking fontdb v0.16.2
    Checking loop9 v0.1.5
    Checking fax v0.2.6
    Checking smithay-client-toolkit v0.19.2
    Checking getrandom v0.3.4
    Checking tiny-skia v0.11.4
    Checking zune-inflate v0.2.54
    Checking pxfm v0.1.27
    Checking euclid v0.22.13
    Checking avif-serialize v0.8.8
    Checking lebe v0.5.3
    Checking color_quant v1.1.0
    Checking zune-core v0.5.1
    Checking bit_field v0.10.3
    Checking tracing-core v0.1.36
    Checking rgb v0.8.52
    Checking etagere v0.2.15
    Checking cosmic-text v0.12.1
    Checking tracing v0.1.44
    Checking ravif v0.12.0
    Checking zune-jpeg v0.5.12
    Checking moxcms v0.7.11
    Checking exr v1.74.0
    Checking gif v0.14.1
    Checking x11rb v0.13.2
    Checking wgpu v23.0.1
    Checking image-webp v0.2.4
    Checking sctk-adwaita v0.10.1
    Checking ahash v0.8.12
    Checking tiff v0.10.3
    Checking x11-dl v2.21.0
    Checking xkbcommon-dl v0.4.2
    Checking wayland-protocols-plasma v0.3.10
    Checking qoi v0.4.1
    Checking glyphon v0.7.0
    Checking image v0.25.9
    Checking winit v0.30.12
    Checking forge-test-tools v0.1.0 (/app/crates/forge-test-tools)
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `Unidentified` found for enum `KeyCode` in the current scope
  --> crates/forge-test-tools/src/input_sim.rs:26:92
   |
26 | ...Key::Code(winit::keyboard::KeyCode::Unidentified(winit::keyboard::NativeKeyCode::Unidentified)),
   |                                        ^^^^^^^^^^^^ variant or associated item not found in `KeyCode`

error: cannot construct `KeyEvent` with struct literal syntax due to private fields
  --> crates/forge-test-tools/src/input_sim.rs:25:20
   |
25 |             event: winit::event::KeyEvent {
   |                    ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...and other private field `platform_specific` that was not provided

error[E0599]: no variant or associated item named `Unidentified` found for enum `KeyCode` in the current scope
  --> crates/forge-test-tools/src/input_sim.rs:45:88
   |
45 | ...Key::Code(winit::keyboard::KeyCode::Unidentified(winit::keyboard::NativeKeyCode::Unidentified)),
   |                                        ^^^^^^^^^^^^ variant or associated item not found in `KeyCode`

error: cannot construct `KeyEvent` with struct literal syntax due to private fields
  --> crates/forge-test-tools/src/input_sim.rs:44:16
   |
44 |         event: winit::event::KeyEvent {
   |                ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...and other private field `platform_specific` that was not provided

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> crates/forge-test-tools/src/input_sim.rs:15:29
   |
15 |         device_id: unsafe { std::mem::transmute(0u64) },
   |                             ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u64` (64 bits)
   = note: target type: `DeviceId` (32 bits)

warning: unused variable: `x`
 --> crates/forge-test-tools/src/input_sim.rs:7:14
  |
7 | pub fn click(x: f32, y: f32) -> WindowEvent {
  |              ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `y`
 --> crates/forge-test-tools/src/input_sim.rs:7:22
  |
7 | pub fn click(x: f32, y: f32) -> WindowEvent {
  |                      ^ help: if this is intentional, prefix it with an underscore: `_y`

Some errors have detailed explanations: E0512, E0599.
For more information about an error, try `rustc --explain E0512`.
warning: `forge-test-tools` (lib) generated 3 warnings
error: could not compile `forge-test-tools` (lib) due to 5 previous errors; 3 warnings emitted
